2007-01-25  Scott Reeves  <sreeves@novell.com>
	* control-center/src/control-center.c: - stop CC common tasks from
	launching twic
	* main-menu/src/system-tile.c: - patch from Otavio Salvador for
	system-tile's launched twice.
	* libslab/application-tile.c: - When no GenericName is present then
	just show and center the Name
		

2007-01-19  Scott Reeves  <sreeves@novell.com>
	* control-center/src/control-center.c
	* libslab/app-shell.c:
	Check the exit arg when exiting via keyboard and context menu	

2007-01-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* libslab/app-shell.c (main_delete_callback): return FALSE if we
	want the window destroyed.

2007-01-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* libslab/app-shell.[ch] (appshelldata_new): added an argument to
	specify whether to exit the program when the shell window is closed.

	* application-browser/src/application-browser.c (main): pass FALSE,
	don't quit.

	* control-center/src/control-center.c (main): pass TRUE, quit when
	closed.
	(handle_static_action_clicked): check for the exit_on_close flag if
	the GConf key is set.

2007-01-12  Scott Reeves  <sreeves@novell.com>
	* libslab/libslab.pc.in:
	Clean up the .pc file

2007-01-12  Scott Reeves  <sreeves@novell.com>
	* ChangeLog
	* libslab/app-resizer.c
	* libslab/tile-action.c
	* libslab/shell-window.c
	* libslab/slab-section.c
	* libslab/app-shell-startup.c
	* libslab/app-shell.c:
	Patch from Jens Granseuer for http://bugzilla.gnome.org/show_bug.cgi?id=383029.
	http://bugzilla.gnome.org/show_bug.cgi?id=393708.

2007-01-11  Scott Reeves  <sreeves@novell.com>
	* libslab/app-shell.c:
	Original Patch from Denis Washington. Tweaked the category name after
	discussion on #control-center to indicate more clearly that this is
	not a permanent home for items. They should classify themselves into
	one of the existing top level categories.
	http://bugzilla.gnome.org/show_bug.cgi?id=384051.

2006-12-28  Adam Weinberger  <adamw@gnome.org>
