@@ -83,8 +83,8 @@ main (int argc, char *argv[])
 	NewAppConfig *config = g_new0 (NewAppConfig, 1);
 	config->max_items = get_slab_gconf_int (NEW_APPS_MAX_ITEMS);
 	config->name = _("New Applications");
-	AppShellData *app_data = appshelldata_new (
-		"applications.menu", config, APPLICATION_BROWSER_PREFIX, GTK_ICON_SIZE_DND, FALSE);
+	AppShellData *app_data = appshelldata_new ("applications.menu", config,
+		APPLICATION_BROWSER_PREFIX, GTK_ICON_SIZE_DND, TRUE, FALSE);
 	generate_categories (app_data);
 
 	layout_shell (app_data, _("Filter"), _("Groups"), _("Application Actions"), NULL, NULL);
