@@ -1,4 +1,4 @@
-AC_INIT([gnome-main-menu], [0.9.1], [])
+AC_INIT([gnome-main-menu], [0.9.2], [])
 
 AC_CONFIG_SRCDIR([.])
 AC_CONFIG_HEADERS([config.h])
