@@ -34,6 +34,7 @@
 #	define libslab_bookmark_file_get_app_info     g_bookmark_file_get_app_info
 #	define libslab_bookmark_file_get_groups       g_bookmark_file_get_groups
 #	define libslab_bookmark_file_add_group        g_bookmark_file_add_group
+#	define libslab_bookmark_file_move_item        g_bookmark_file_move_item
 #else
 #	include "eggbookmarkfile.h"
 
@@ -61,6 +62,7 @@
 #	define libslab_bookmark_file_get_app_info     egg_bookmark_file_get_app_info
 #	define libslab_bookmark_file_get_groups       egg_bookmark_file_get_groups
 #	define libslab_bookmark_file_add_group        egg_bookmark_file_add_group
+#	define libslab_bookmark_file_move_item        egg_bookmark_file_move_item
 #endif
 
 G_BEGIN_DECLS
